# Logistic

./: .env  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
Logistic/: asgi.py  settings.py  urls.py  wsgi.py
api/: urls.py
catalogs/: urls.py
catalogs/terms_of_payments/: apps.py  models.py  serializers.py  urls.py  views.py
catalogs/terms_of_payments/management/commands/: create_terms_of_payments.py
catalogs/types_of_companies/: apps.py  models.py  serializers.py  urls.py  views.py
catalogs/types_of_companies/management/commands/: create_types_of_companies.py
catalogs/types_of_companies/migrations/: 0001_initial.py  0002_auto_20201124_1418.py
companies/: models.py  serializers.py  urls.py  views.py
companies/management/commands/: create_companies.py
companies/migrations/: 0001_initial.py  0002_auto_20201124_1405.py  0002_companytype_is_archived.py  0003_auto_20201124_1423.py
core/: models.py
project/: settings.py  urls.py
requests_app/: apps.py  models.py  serializers.py  urls.py  views.py
requests_app/management/commands/: create_requests.py
requests_app/migrations/: 0001_initial.py  0002_auto_20201124_1428.py
